fix align/justify center for certain sizes of screen

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -212,13 +212,16 @@
     width: 100%;
     flex-direction: column;
     height: auto;
+    display: flex;
+    justify-content: center;
+    align-items:center;
   }
   .buildingBlocks {
     flex-flow: column;
     margin: 0;
     justify-content: space-between;
     height: auto;
-    width: 100%;
+    width: 100vw;
     display: flex;
   }
   .sfContainer{
